[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Plunge.png" type="Texture" id=1]
[ext_resource path="res://src/guns/PlungerBullet.gd" type="Script" id=2]
[ext_resource path="res://shared/combat/OneWayCollision.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 12 )

[sub_resource type="Animation" id=4]
resource_name = "Despawn"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.3, 1.6, 1.9, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.705882 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="PlungerBullet" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )
one_way_collision_margin = 22.5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 11, -1 )
texture = ExtResource( 1 )

[node name="HorizontalCollision" type="StaticBody2D" parent="."]
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizontalCollision"]
position = Vector2( 12, 0 )
shape = SubResource( 2 )
one_way_collision = true

[node name="VerticalCollision" type="StaticBody2D" parent="."]
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalCollision"]
position = Vector2( 12, 0 )
rotation = 1.5708
shape = SubResource( 3 )
one_way_collision = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Despawn = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
